--- a/misc/literature.bib
+++ b/misc/literature.bib
@@ -16,3 +16,12 @@
     publisher   = {},
     location    = {}
 }
+
+@online{example,
+    author		= {John Doe},
+    title		= {Great title},
+    shorttitle	= {Great},
+    date		= {2018-05-02},
+    urldate		= {2008-05-02},
+    url			= {http://www.reddit.com}
+}
