--- a/pages/text.tex
+++ b/pages/text.tex
@@ -1,1 +1,15 @@
-Hello world!
+\section{This is a section}
+\blindtext \myfootcite[Vgl.][42]{example}
+\subsection{This is a subsection}
+\blindtext \ac{API}
+\subsubsection{This is a subsubsection}
+\blindtext \ac{API}
+\section*{This is a unnumbered section}
+\begin{figure}[ht] 
+    \centering
+    \caption{Example caption}
+    \includegraphics[width=\textwidth]{figure} 
+    \caption*{\footnotesize{Source: \mycite[69]{example}}}
+    \label{fig:goodreference}
+    \end{figure}
+\blindtext
