--- a/misc/properties.tex
+++ b/misc/properties.tex
@@ -13,7 +13,9 @@
 % Text
 %
 \def\mytitle{This is a really amazing title.}
-\def\mytitleontitlepage{This is a\\ really amazing title\\}
+\def\mytitlewithlinebreaks{This is a\\ really amazing title}
+\def\mysubtitle{This is my super cool subtitle :D}
+\def\mysubtitlewithlinebreaks{This is my super cool subtitle\\:D}
 \def\mytexttype{Bachelor thesis}
 \def\mycompany{Company}
 \def\mylecturer{Some human}
