--- a/pages/independence-notice.tex
+++ b/pages/independence-notice.tex
@@ -5,7 +5,7 @@
 \addcontentsline{toc}{section}{Selbstständigkeitserklärung}
 Ich versichere hiermit, dass ich meine Projektarbeit mit dem Thema
 \begin{center}
-\textbf{\mytitle}
+\textbf{{\large \mytitle} \\ \mysubtitle}
 \end{center}
 selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe. Ich versichere außerdem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung übereinstimmt.\\
 \\
