--- a/pages/title.tex
+++ b/pages/title.tex
@@ -4,8 +4,10 @@
 \thispagestyle{empty}
 
 \begin{center}
-\vspace*{3cm} \ \\
-{\huge\bfseries \mytitleontitlepage}
+\vspace*{1cm} \ \\
+{\fontsize{40}{48}\selectfont \bfseries \mytitlewithlinebreaks \\}
+\vspace{0.75cm}
+{\Large\bfseries \mysubtitlewithlinebreaks \\}
 \vspace{1.5cm}
 \mytexttype \\
 Studienjahrgang \myyearofstudy \\
