--- a/pages/independence-notice.tex
+++ b/pages/independence-notice.tex
@@ -3,7 +3,7 @@
 \newpage
 \section*{Selbstständigkeitserklärung}
 \addcontentsline{toc}{section}{Selbstständigkeitserklärung}
-Ich versichere hiermit, dass ich meine Projektarbeit mit dem Thema
+Ich versichere hiermit, dass ich meine \mytexttype \ mit dem Thema
 \begin{center}
 \textbf{{\large \mytitle} \\ \mysubtitle}
 \end{center}
