--- a/pages/independence-notice.tex
+++ b/pages/independence-notice.tex
@@ -7,7 +7,7 @@ Ich versichere hiermit, dass ich meine \mytexttype \ mit dem Thema
 \begin{center}
 \textbf{{\large \mytitle} \\ \mysubtitle}
 \end{center}
-selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe. Ich versichere außerdem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung übereinstimmt.\\
+selbstständig und nur mit den angegebenen Quellen und Hilfsmitteln verfasst habe sowie dass die eingereichte gedruckte Version mit der elektronischen Version inhaltlich übereinstimmt.\\
 \\
 \vspace{15mm}
 \noindent{}\mysubmissionplace , \mydate
