Updated text to latest official version

--- a/pages/non-disclosure-notice.tex
+++ b/pages/non-disclosure-notice.tex
@@ -5,11 +5,4 @@
 
 \section*{Sperrvermerk}
 
-Die vorliegende Arbeit enthält vertrauliche Daten der\ \mycompany .
-Eine Veröffentlichung oder Vervielfältigung dieser Arbeit, auch in Auszügen, ist ohne ausdrückliche Genehmigung der\ \mycompany \ und des Verfassers nicht erlaubt.
-In diese Arbeit dürfen nur befugte Mitarbeiter der \ \mycompany \ und Personen, die unmittelbar am Prüfungsprozess der DHBW Villingen-Schwenningen beteiligt sind und einer Verschwiegenheitspflicht unterliegen, Einsicht nehmen.
-Ausnahmen bedürfen einer ausdrücklichen schriftlichen Genehmigung der \ \mycompany \ und des Verfassers.
-
-Eine wissenschaftliche Auswertung der Arbeit und Veröffentlichung entsprechender Ergebnisse ist ausdrücklich nicht gestattet.
-Auch dann nicht, wenn in der Veröffentlichung kein direkter Bezug zum Unternehmen erkennbar ist.
-Ausnahmen bedürfen einer ausdrücklichen schriftlichen Genehmigung der \ \mycompany \ und des Verfassers.
+Der Inhalt dieser Arbeit darf weder als Ganzes noch in Auszügen Personen außerhalb des Prüfungsprozesses und des Evaluationsverfahrens zugänglich gemacht werden, sofern keine anders lautende Genehmigung der Ausbildungsstätte vorliegt.
