Fixed usage of the acronym package

--- a/pages/acronym.tex
+++ b/pages/acronym.tex
@@ -4,7 +4,7 @@
 
 \section*{Abkürzungsverzeichnis}
 
-\begin{acronym}[API] % put the longest acronym in these brackets
+\begin{acronym}[APIAPI] % put the longest acronym twice in these brackets in order to create a visually pleasing spacing (according to the DHBW)
 
 \setlength{\itemsep}{-\parsep} % line spacing
 
