update directory adjustments

--- a/misc/header.tex
+++ b/misc/header.tex
@@ -69,11 +69,17 @@
   % Other directories
   % Required directory adjustments
   \usepackage[subfigure]{tocloft}
-  \renewcommand{\cftfigfont}{Abbildung }
-  \renewcommand{\cfttabfont}{Tabelle }
+  \renewcommand{\cftfigpresnum}{Abbildung }
+  \renewcommand{\cfttabpresnum}{Tabelle }  
   \renewcommand{\cftfigaftersnum}{:}
   \renewcommand{\cfttabaftersnum}{:}
-  
+  \newlength{\ctmfignumwidth}
+  \newlength{\ctmtabnumwidth}
+  \settowidth{\ctmfignumwidth}{\cftfigpresnum}
+  \settowidth{\ctmtabnumwidth}{\cfttabpresnum}
+  \setlength{\cftfignumwidth}{\dimexpr\ctmfignumwidth+1.5em}
+  \setlength{\cfttabnumwidth}{\dimexpr\ctmtabnumwidth+1.5em}
+
   %**************************************************************
   % Graphics
   %
