remove indentation from figures and tables

--- a/misc/header.tex
+++ b/misc/header.tex
@@ -79,6 +79,10 @@
   \settowidth{\ctmtabnumwidth}{\cfttabpresnum}
   \setlength{\cftfignumwidth}{\dimexpr\ctmfignumwidth+1.5em}
   \setlength{\cfttabnumwidth}{\dimexpr\ctmtabnumwidth+1.5em}
+  % remove indentation from figures in lof
+  \setlength{\cftfigindent}{0pt}
+  % remove indentation from tables in lot
+  \setlength{\cfttabindent}{0pt}
 
   %**************************************************************
   % Graphics
