replace watermark workaround

--- a/pages/title.tex
+++ b/pages/title.tex
@@ -1,6 +1,5 @@
 %!TEX root = ../root.tex
 
-\setcounter{page}{1337} % watermark workaround
 \thispagestyle{empty}
 
 \newgeometry{
@@ -25,6 +24,11 @@ Studiengang \mycourseofstudy \\
 DUALE HOCHSCHULE BADEN-WÜRTTEMBERG\\
 VILLINGEN-SCHWENNINGEN\\
 \end{center}
+\begin{textblock*}{50mm}(40mm,180mm)
+    \begin{rotate}{50}
+        \fontsize{34}{40}\bfseries\textcolor{red}{Sperrvermerk}
+    \end{rotate}
+\end{textblock*}
 \begin{table}[b]
 \begin{tabular}{ll}
 Bearbeiter: 		&	\myauthor \\
