--- a/root.tex
+++ b/root.tex
@@ -33,6 +33,7 @@
 \pagenumbering{Roman}
 \setcounter{page}{2}
 \tableofcontents
+\thispagestyle{empty}
 
 %**************************************************************
 % List of acronyms
@@ -54,6 +55,10 @@
 
 %**************************************************************
 % Text
+
+% Fixes pagination if the table of contents is longer than one page.
+\addtocontents{toc}{\protect\thispagestyle{empty}}
+
 \newpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
