Update project structure

--- a/content/misc/acronyms.tex
+++ b/content/misc/acronyms.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../root.tex
+%!TEX root = ../../root.tex
 
 % Watch out! You have to sort the acronyms manually in alphabetical order!
 
