--- a/content/text.tex
+++ b/content/text.tex
@@ -1,3 +1,5 @@
+%!TEX root = ../root.tex
+
 \section{This is a section}
 \blindtext \myfootcite[Vgl.][42]{example}
 \subsection{This is a subsection}
