--- a/template/header.tex
+++ b/template/header.tex
@@ -57,14 +57,14 @@
   
   % Required changes
   \defbibheading{lit}{\section*{Literaturverzeichnis}}
-  \addbibresource{misc/literature.bib}
+  \addbibresource{content/misc/literature.bib}
   
   % Import DHBW custom bibliography style
   \usepackage{array}
   \usepackage{longtable}
-  \input{misc/dhbw-bibstyle}
+  \input{template/dhbw-bibstyle}
   % Import DHBW custom citing style
-  \input{misc/dhbw-citestyle}
+  \input{template/dhbw-citestyle}
   
   % Other directories
   % Required directory adjustments
@@ -88,7 +88,7 @@
   % Graphics
   %
   \usepackage{graphicx}
-  \graphicspath{ {figures/} }
+  \graphicspath{ {content/assets/} }
   % Wrap text around figures
   \usepackage{wrapfig}
   % To place two images beside each other
