Move title assets to seperate folder

--- a/template/title.tex
+++ b/template/title.tex
@@ -38,9 +38,9 @@ Betreuender Dozent:	&	\mylecturer \\
 \\
 \\
 \begin{tabularx}{\textwidth}{lXl}
-\includegraphics[width=.3\linewidth]{../assets/dhbw-vs-logo} &
+\includegraphics[width=.3\linewidth]{title/dhbw-vs-logo} &
 &
-\raisebox{\height}{\includegraphics[width=.3\linewidth]{../assets/company-logo} }
+\raisebox{\height}{\includegraphics[width=.3\linewidth]{title/company-logo} }
 \end{tabularx}
 \end{table}
 
