--- a/template/header.tex
+++ b/template/header.tex
@@ -40,7 +40,7 @@
   %**************************************************************
   % Page number
   %
-  % Required page number postition (top-right corner)
+  % Required page number position (top-right corner)
   \usepackage{fancyhdr}
   \pagestyle{fancy}
   \fancyhf{}
