Add listings support

--- a/root.tex
+++ b/root.tex
@@ -54,6 +54,12 @@
 \addcontentsline{toc}{section}{\listtablename}
 
 %**************************************************************
+% List of listings
+\newpage
+\lstlistoflistings
+\addcontentsline{toc}{section}{\lstlistingname}
+
+%**************************************************************
 % Text
 
 % Fixes pagination if the table of contents is longer than one page.
