--- a/content/text.tex
+++ b/content/text.tex
@@ -11,7 +11,19 @@
     \centering
     \caption{Example caption}
     \includegraphics[width=\textwidth]{figure} 
-    \caption*{\footnotesize{Source: \mycite[69]{example}}}
+    \subcaption{Source: \mycite[69]{example}}
     \label{fig:goodreference}
     \end{figure}
 \blindtext
+
+\begin{subcaptionenv}{Source: \mycite[Vgl.][2]{example}}
+    \begin{lstlisting}[caption={Express Example}, language=javascript]
+const express = require('express')
+const app = express()
+const port = 3000
+
+app.get('/', (req, res) => res.send('Hello World!'))
+
+app.listen(port, () => console.log(`Example app listening on port ${port}!`))
+        \end{lstlisting}
+\end{subcaptionenv}
