--- a/template/header.tex
+++ b/template/header.tex
@@ -111,29 +111,53 @@
   %**************************************************************
   % Code listings
   %
+  \usepackage{xcolor}
   \usepackage{listings}
-  % Customizations for Java
-  \usepackage{color}
-  \definecolor{darkgreen}{rgb}{0,0.6,0}
-  \definecolor{gray}{rgb}{0.5,0.5,0.5}
-  \definecolor{mauve}{rgb}{0.58,0,0.82}
-  \lstset{
-    frame=tb,
-    language=Java,
-    aboveskip=3mm,
-    belowskip=3mm,
-    showstringspaces=false,
-    columns=flexible,
-    basicstyle={\small\ttfamily},
-    numbers=none,
-    numberstyle=\tiny\color{gray},
-    keywordstyle=\color{blue},
-    commentstyle=\color{darkgreen},
-    stringstyle=\color{mauve},
+
+  \lstdefinestyle{base}{
+    showspaces=false,
+    showtabs=false,
+    frame=single,
     breaklines=true,
+    numbers=left,
+    showstringspaces=false,
     breakatwhitespace=true,
-    tabsize=3
+    escapeinside={(*@}{@*)},
+    basicstyle=\footnotesize\ttfamily,
+    belowcaptionskip=\baselineskip
   }
+  \lstset{style=base}
+
+  \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
+  \definecolor{greencomments}{rgb}{0,0.5,0}
+  \definecolor{redstrings}{rgb}{0.9,0,0}
+  \lstdefinelanguage{csharp}{
+    language=[Sharp]C,
+    commentstyle=\color{greencomments},
+    keywordstyle=\color{bluekeywords}\bfseries,
+    stringstyle=\color{redstrings}
+  }
+
+  \definecolor{lightgray}{rgb}{0.9, 0.9, 0.9}
+  \definecolor{darkgray}{rgb}{0.4, 0.4, 0.4}
+  \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+  \lstdefinelanguage{javascript}{
+    keywords={break, case, catch, continue, debugger, default, delete, do, else, false, finally, for, function, if, in, instanceof, new, null, return, switch, this, throw, true, try, typeof, var, void, while, with},
+    morecomment=[l]{//},
+    morecomment=[s]{/*}{*/},
+    morestring=[b]',
+    morestring=[b]",
+    ndkeywords={class, export, boolean, throw, implements, import, this},
+    keywordstyle=\color{blue}\bfseries,
+    ndkeywordstyle=\color{darkgray}\bfseries,
+    identifierstyle=\color{black},
+    commentstyle=\color{purple}\ttfamily,
+    stringstyle=\color{red}\ttfamily,
+    sensitive=true
+  }
+
+  \renewcommand{\lstlistingname}{Quellcode}
+  \renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
   
   %**************************************************************
   % Acronyms
@@ -144,8 +168,19 @@
   % Util for the non-disclosure notice lettering on the title page
   %
   \usepackage{rotating}
-  \usepackage{xcolor}
   \usepackage[absolute]{textpos}
+
+  %**************************************************************
+  % Custom macros
+  %
+  \newcommand{\subcaption}[1] {
+    \begin{center}
+      \footnotesize{#1}
+    \end{center}
+  }
+
+  \usepackage{xparse}
+  \NewDocumentEnvironment{subcaptionenv}{m}{}{\subcaption{#1}}
   
   %**************************************************************
   % Fix: New paragraph is not indent
