Fixed name of list of listings in table of content

--- a/root.tex
+++ b/root.tex
@@ -57,7 +57,7 @@
 % List of listings
 \newpage
 \lstlistoflistings
-\addcontentsline{toc}{section}{\lstlistingname}
+\addcontentsline{toc}{section}{\lstlistlistingname}
 
 %**************************************************************
 % Text
