Update page margins

--- a/template/header.tex
+++ b/template/header.tex
@@ -16,7 +16,7 @@
   \renewcommand{\familydefault}{\sfdefault}
   \usepackage[T1]{fontenc}
   % Required page margins (4cm 1.5cm 2.5cm 2cm)
-  \usepackage[a4paper,lmargin={4cm},rmargin={1.5cm},tmargin={2.5cm},bmargin={2cm}]{geometry}
+  \usepackage[a4paper,tmargin={4cm},bmargin={2cm},lmargin={4cm},rmargin={2cm}]{geometry}
   % Required line spacing (1.5)
   \usepackage[onehalfspacing]{setspace}
   % UTF-8-Encoding
