Remove incorrect comment
We don't need this comment anymore :)

--- a/template/header.tex
+++ b/template/header.tex
@@ -15,7 +15,7 @@
   \usepackage{helvet} % \usepackage{times}
   \renewcommand{\familydefault}{\sfdefault}
   \usepackage[T1]{fontenc}
-  % Required page margins (4cm 1.5cm 2.5cm 2cm)
+  % Required page margins
   \usepackage[a4paper,tmargin={4cm},bmargin={2cm},lmargin={4cm},rmargin={2cm}]{geometry}
   % Required line spacing (1.5)
   \usepackage[onehalfspacing]{setspace}
