Update csquotes to use german symbols

--- a/template/header.tex
+++ b/template/header.tex
@@ -29,7 +29,7 @@
   % German hyphenation
   \usepackage[ngerman]{babel}
   % Extension for hyphenation on quotes
-  \usepackage{csquotes}
+  \usepackage[autostyle=true,german=quotes]{csquotes}
   % Generate random text
   \usepackage{blindtext}
   % Fixes indentation issue #21 for long author names in footnotes
