Add file extensions to \includegraphics cmds

--- a/content/text.tex
+++ b/content/text.tex
@@ -10,7 +10,7 @@
 \begin{figure}[ht] 
     \centering
     \caption{Example caption}
-    \includegraphics[width=\textwidth]{figure} 
+    \includegraphics[width=\textwidth]{figure.png} 
     \subcaption{Source: \mycite[69]{example}}
     \label{fig:goodreference}
     \end{figure}
