--- a/template/header.tex
+++ b/template/header.tex
@@ -191,3 +191,4 @@
   % NOTE: Has to be loaded after the package tocloft
   %
   \usepackage[parfill]{parskip}
+  \usepackage{plantuml} % has to be loaded here. why? idk -.-
