Add toggle for non-disclosure notice

--- a/root.tex
+++ b/root.tex
@@ -25,7 +25,7 @@
 
 %**************************************************************
 % Non-disclosure notice
-\input{template/non-disclosure-notice}
+\iftoggle{dhbw@include@nondisclosurenotice}{\input{template/non-disclosure-notice}}{}
 
 %**************************************************************
 % Table of contents
