--- a/template/title.tex
+++ b/template/title.tex
@@ -24,11 +24,12 @@ Studiengang \mycourseofstudy \\
 DUALE HOCHSCHULE BADEN-WÜRTTEMBERG\\
 VILLINGEN-SCHWENNINGEN\\
 \end{center}
+\iftoggle{dhbw@include@nondisclosurenotice}{%
 \begin{textblock*}{50mm}(40mm,180mm)
     \begin{rotate}{50}
         \fontsize{34}{40}\bfseries\textcolor{red}{Sperrvermerk}
     \end{rotate}
-\end{textblock*}
+\end{textblock*}}{}
 \begin{table}[b]
 \begin{tabular}{ll}
 Bearbeiter: 		&	\myauthor \\
