Add new config and update independence notice

--- a/content/text.tex
+++ b/content/text.tex
@@ -52,3 +52,6 @@ app.listen(port, () => console.log(`Example app listening on port ${port}!`))
     \caption*{\footnotesize{Quelle: \mycite[69]{example}}}
     \label{fig:plantuml_test}
 \end{figure}
+
+\ifdebug{}debug ist an\fi
+
