--- a/root.tex
+++ b/root.tex
@@ -82,8 +82,7 @@
 
 %**************************************************************
 % Independence notice
-\newpage
-\input{template/independence-notice}
+\dhbwPrintIndependenceNotice
 
 %**************************************************************
 % The end of the document
