--- a/template/header.tex
+++ b/template/header.tex
@@ -197,3 +197,43 @@
   \providetoggle{dhbw@include@nondisclosurenotice}
   \newcommand{\dhbwProvideNonDisclosureNotice}{\settoggle{dhbw@include@nondisclosurenotice}{true}}
   
+  \usepackage{pgfkeys}
+
+  \newif\ifdebug
+
+  \pgfkeys{
+    /dhbw/.cd,
+    author/.store in            = \dhbwGetAuthor,
+    faculty/.store in           = \dhbwGetFaculty,
+    field of study/.store in    = \dhbwGetFieldOfStudy,
+    academic year/.store in     = \dhbwGetAcademicYear,
+    course/.store in            = \dhbwGetCourse,
+    title/.store in             = \dhbwGetTitle,
+    subtitle/.store in          = \dhbwGetSubtitle,
+    text type/.store in         = \dhbwGetTextType,
+    company/.store in           = \dhbwGetCompany,
+    lecturer/.store in          = \dhbwGetLecturer,
+    location/.store in          = \dhbwGetLocation,
+    date/.store in              = \dhbwGetDate,
+    debug/.is if                = debug
+  }
+
+  \newrobustcmd\dhbwSetup[1]{\pgfqkeys{/dhbw}{#1}}
+
+  \dhbwSetup{%
+    author          = Simon Eßlinger,
+    faculty         = Wirtschaft,
+    field of study  = Wirtschaftsinformatik,
+    academic year   = 2000,
+    course          = B,
+    title           = Eine Arbeit,
+    subtitle        = Ein Untertitel,
+    text type       = Projektarbeit 2,
+    company         = GitHub,
+    lecturer        = Prof. Dr. Peter Lustig,
+    location        = Villingen-Schwenningen,
+    date            = \today,
+    debug           = false
+  }
+
+  \newcommand{\dhbwPrintIndependenceNotice}{\input{template/independence-notice.tex}}
