--- a/template/independence-notice.tex
+++ b/template/independence-notice.tex
@@ -1,22 +1,20 @@
-%!TEX root = ../root.tex
-
 \newpage
 
 \section*{Selbstständigkeitserklärung}\addcontentsline{toc}{section}{Selbstständigkeitserklärung}
 
-Ich versichere hiermit, dass ich meine \mytexttype{} mit dem Thema
+Ich versichere hiermit, dass ich meine \dhbwGetTextType{} mit dem Thema
 
 \begin{center}
-    \textbf{{\large \mytitle{}} \\\mysubtitle{}}
+    \textbf{{\large \dhbwGetTitle{}} \\\dhbwGetSubtitle{}}
 \end{center}
 
 selbstständig und nur mit den angegebenen Quellen und Hilfsmitteln verfasst habe sowie dass die eingereichte gedruckte Version mit der elektronischen Version inhaltlich übereinstimmt.
 
 \vspace{1cm}
-\mysubmissionplace{},\ \mydate{}
+\dhbwGetLocation{},\ \dhbwGetDate{}
 \hfill
 \begin{minipage}[t]{5.5cm}
     \centering
     \dotfill \\
-    \myauthor{}
+    \dhbwGetAuthor{}
 \end{minipage}
