Add macro for non-disclosure notice

--- a/root.tex
+++ b/root.tex
@@ -25,7 +25,7 @@
 
 %**************************************************************
 % Non-disclosure notice
-\iftoggle{dhbw@include@nondisclosurenotice}{\input{template/non-disclosure-notice}}{}
+\dhbwPrintNonDisclosureNotice
 
 %**************************************************************
 % Table of contents
