Add title page macro

--- a/root.tex
+++ b/root.tex
@@ -16,12 +16,11 @@
 
 %**************************************************************
 % Properties
-\input{content/misc/config}
 \begin{document}\selectlanguage{ngerman}
 
 %**************************************************************
 % Title
-\input{template/title}
+\dhbwPrintTitle
 
 %**************************************************************
 % Non-disclosure notice
