Add list of figures macro

--- a/root.tex
+++ b/root.tex
@@ -42,9 +42,7 @@
 
 %**************************************************************
 % List of figures
-\newpage
-\listoffigures
-\addcontentsline{toc}{section}{\listfigurename}
+\dhbwPrintListOfFigures
 
 %**************************************************************
 % List of tables
