Add list of tables macro

--- a/root.tex
+++ b/root.tex
@@ -46,9 +46,7 @@
 
 %**************************************************************
 % List of tables
-\newpage
-\listoftables
-\addcontentsline{toc}{section}{\listtablename}
+\dhbwPrintListOfTables
 
 %**************************************************************
 % List of listings
