--- a/template/header.tex
+++ b/template/header.tex
@@ -241,3 +241,9 @@
     \newpage
     \listoffigures\addcontentsline{toc}{section}{\listfigurename}
   }
+  \newcommand{\dhbwPrintListOfTables}{%
+    \newpage
+    \listoftables\addcontentsline{toc}{section}{\listtablename}
+  }
+
+
