Add list of listings macro

--- a/root.tex
+++ b/root.tex
@@ -50,9 +50,7 @@
 
 %**************************************************************
 % List of listings
-\newpage
-\lstlistoflistings
-\addcontentsline{toc}{section}{\lstlistlistingname}
+\dhbwPrintListOfListings
 
 %**************************************************************
 % Text
