--- a/template/header.tex
+++ b/template/header.tex
@@ -245,5 +245,7 @@
     \newpage
     \listoftables\addcontentsline{toc}{section}{\listtablename}
   }
-
-
+  \newcommand{\dhbwPrintListOfListings}{%
+    \newpage
+    \lstlistoflistings\addcontentsline{toc}{section}{\lstlistlistingname}
+  }
