Add bibliography macro

--- a/root.tex
+++ b/root.tex
@@ -69,9 +69,7 @@
 
 %**************************************************************
 % Literature
-\newpage
-\addcontentsline{toc}{section}{Literaturverzeichnis}
-\printbibtabular[title=Literaturverzeichnis]
+\dhbwPrintBibliography
 
 %**************************************************************
 % Independence notice
