--- a/template/header.tex
+++ b/template/header.tex
@@ -249,3 +249,7 @@
     \newpage
     \lstlistoflistings\addcontentsline{toc}{section}{\lstlistlistingname}
   }
+  \newcommand{\dhbwPrintBibliography}{%
+    \newpage
+    \printbibtabular[title=Literaturverzeichnis]\addcontentsline{toc}{section}{Literaturverzeichnis}
+  }
