Move dhbw logo to template folder

--- a/template/title.tex
+++ b/template/title.tex
@@ -36,7 +36,7 @@ Betreuender Dozent:	&	\dhbwGetLecturer \\
 \\
 \\
 \begin{tabularx}{\textwidth}{lXl}
-\includegraphics[width=.3\linewidth]{title/dhbw-vs-logo.png} &
+\includegraphics[width=.3\linewidth]{../../template/dhbw-vs-logo.png} &
 &
 \raisebox{\height}{\includegraphics[width=.3\linewidth]{\dhbwGetCompanyLogo} }
 \end{tabularx}
