Add macro for list of acronyms

--- a/root.tex
+++ b/root.tex
@@ -36,9 +36,10 @@
 
 %**************************************************************
 % List of acronyms
-\newpage
-\input{content/misc/acronyms}
-\addcontentsline{toc}{section}{Abkürzungsverzeichnis}
+\dhbwPrintListOfAcronyms{APIAPI}{%
+    \acro{API}{Application Programming Interface}
+    \acroplural{API}[API's]{Application Programming Interfaces}
+}
 
 %**************************************************************
 % List of figures
