--- a/content/text.tex
+++ b/content/text.tex
@@ -5,7 +5,7 @@
 \subsection{This is a subsection}
 \blindtext \ac{API}
 \subsubsection{This is a subsubsection}
-\blindtext \ac{API}
+\blindtext \acp{API}
 \section*{This is a unnumbered section}
 
 \begin{figure}[ht] 
@@ -54,4 +54,3 @@ app.listen(port, () => console.log(`Example app listening on port ${port}!`))
 \end{figure}
 
 \ifdebug{}debug ist an\fi
-
