--- a/template/header.tex
+++ b/template/header.tex
@@ -253,3 +253,11 @@
     \newpage
     \printbibtabular[title=Literaturverzeichnis]\addcontentsline{toc}{section}{Literaturverzeichnis}
   }
+  \newcommand{\dhbwPrintListOfAcronyms}[2]{%
+    \newpage
+    \section*{Abkürzungsverzeichnis}\addcontentsline{toc}{section}{Abkürzungsverzeichnis}
+    \begin{acronym}[#1] % spacing between acronym and long name
+      \setlength{\itemsep}{-\parsep} % line spacing
+      #2
+    \end{acronym}
+  }
