Add macro for table of contents

--- a/root.tex
+++ b/root.tex
@@ -4,13 +4,7 @@
 
 \dhbwPrintTitle
 \dhbwPrintNonDisclosureNotice
-
-\newpage
-\pagenumbering{Roman}
-\setcounter{page}{2}
-\tableofcontents
-\thispagestyle{empty}
-
+\dhbwPrintTableOfContents
 \dhbwPrintListOfAcronyms{APIAPI}{%
     \acro{API}{Application Programming Interface}
     \acroplural{API}[API's]{Application Programming Interfaces}
@@ -20,7 +14,6 @@
 \dhbwPrintListOfListings
 
 \addtocontents{toc}{\protect\thispagestyle{empty}}
-
 \newpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
