--- a/template/header.tex
+++ b/template/header.tex
@@ -261,3 +261,10 @@
       #2
     \end{acronym}
   }
+  \newcommand{\dhbwPrintTableOfContents}{%
+    \newpage
+    \pagenumbering{Roman}
+    \setcounter{page}{2}
+    \tableofcontents
+    \thispagestyle{empty}
+  }
