--- a/root.tex
+++ b/root.tex
@@ -1,5 +1,22 @@
 \input{template/header}
 
+\dhbwSetup{%
+author          = Simon Eßlinger,
+faculty         = Wirtschaft,
+field of study  = Wirtschaftsinformatik,
+academic year   = 2000,
+course          = B,
+title           = Eine Arbeit,
+subtitle        = Ein Untertitel,
+text type       = Projektarbeit 2,
+company name    = GitHub,
+company logo    = {title/company-logo.png},
+lecturer        = Prof. Dr. Peter Lustig,
+location        = Villingen-Schwenningen,
+date            = \today,
+debug           = false
+}
+
 \begin{document}\selectlanguage{ngerman}
 
 \dhbwPrintTitle
