--- a/root.tex
+++ b/root.tex
@@ -17,7 +17,8 @@ date            = \today,
 debug           = false
 }
 
-\begin{document}\selectlanguage{ngerman}
+\begin{document}
+\dhbwSetFrontMatter
 \dhbwPrintTitle
 \dhbwPrintNonDisclosureNotice
 \dhbwPrintTableOfContents
@@ -25,6 +26,7 @@ debug           = false
     \acro{API}{Application Programming Interface}
     \acroplural{API}[API's]{Application Programming Interfaces}
 }
+\dhbwSetListMatter
 \dhbwPrintListOfFigures
 \dhbwPrintListOfTables
 \dhbwPrintListOfListings
