--- a/template/header.tex
+++ b/template/header.tex
@@ -1,39 +1,22 @@
-%!TEX root = ../root.tex
-
-%**************************************************************
-% Class
-% 
-% Required font size (12)
-% hidelinks hides the hyperref links in the pdf file
-% Fix: sloppy fixes line breaks in URLs
 \documentclass[12pt]{article}
 
-%**************************************************************
-% Text
-%
-% Required font (Times New Roman or Arial). Arial is proprietary. The TeX Gyre Heros font is similar to Arial.
 \usepackage{fontspec}
-\setsansfont{TeX Gyre Heros}
+\setsansfont{TeX Gyre Heros} % like Arial
 \renewcommand{\familydefault}{\sfdefault}
-% Required page margins
+
 \usepackage[a4paper,tmargin={4cm},bmargin={2cm},lmargin={4cm},rmargin={2cm}]{geometry}
-% Required line spacing (1.5)
-\usepackage[onehalfspacing]{setspace}
-% UTF-8-Encoding
+\usepackage[onehalfspacing]{setspace} % line spacing (1.5)
 \usepackage[utf8]{inputenc}
-% Additional math tools
 \usepackage{amsmath}
 \usepackage{amssymb}
-% Official Euro symbol
-\usepackage[official]{eurosym}
-% German hyphenation
-\usepackage[ngerman]{babel}
+\usepackage[official]{eurosym} % Official Euro symbol
+\usepackage{blindtext}
+\usepackage[ngerman]{babel} % German hyphenation
 \addto\captionsngerman{\renewcommand{\contentsname}{Literaturverzeichnis}}
 
-% Extension for hyphenation on quotes
 \usepackage[autostyle=true,german=quotes]{csquotes}
-% Generate random text
-\usepackage{blindtext}
+
+
 % Fixes footnotes sometime not being at the bottom of the page (issue #14)
 \usepackage[bottom]{footmisc}
 % Fixes indentation issue #21 for long author names in footnotes
