Move fontspec to class

--- a/udhbwvst.cls
+++ b/udhbwvst.cls
@@ -3,4 +3,22 @@
 
 \ProvidesClass{udhbwvst}[\udhbwvst@cls@date\space\udhbwvst@cls@info]
 
+% load base class
+
 \LoadClass[12pt]{article}
+
+% load essential packages
+
+\RequirePackage{etoolbox}
+
+% load packages
+
+\RequirePackage{fontspec}
+
+
+% style
+
+% fontspec package
+\setsansfont{TeX Gyre Heros} % like Arial
+\renewcommand{\familydefault}{\sfdefault}
+
