Move setspace package to class

--- a/template/header.tex
+++ b/template/header.tex
@@ -1,7 +1,7 @@
 
 
 
-\usepackage[onehalfspacing]{setspace} % line spacing (1.5)
+ % line spacing (1.5)
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
